--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -474,24 +474,26 @@ ERCC.countmul <- ERCC.mmul*(6.02214076*(10^23))
 ```
 
 During the preparation of the reaction mix, the authors diluted this mix by a factor of 1:50,000 [@Martinez-jimenez2017].
-The actual molecule number of spike-ins can therefore be calculated per well:
+The actual molecule number of spike-ins can therefore be calculated per $\mu{}l$:
 
 ```{r}
 ERCC.count <- ERCC.countmul / 50000
 ```
 
 The volume per well in the IFC chip is 6.7 nano litre [https://www.fluidigm.com/faq/ifc-9](https://www.fluidigm.com/faq/ifc-9).
-We therfore need to calculate the number of molecules in 6.7 nano litre reaaction mix.
+We therfore need to calculate the number of molecules in 6.7 nano litre reaction mix.
 
 ```{r}
 ERCC.count.final <- ERCC.countmul * 0.0067
 ```
 
-We can now use the molecule count to prepare the BASiCS data object.
-To incorporate the ERCC molecule counts within the `Biocpkg("SingleCellExperiment")` object that BASiCS requires, the first column must contain the names associated to the spike-in genes. 
-The second column must contain the input number of molecules for the spike-in genes (amount per well).
+Depending on the technology used to capture and process single cells, and the dilution of the spike-in mix, the absolute number of spike-ins per reaction can change.
+The absolute amount of spike-ins per reaction is purely a scale ... **Add explanation that the number of spike-ins need to be consistent across all wells and experiments but that the scale does not effect the results.**
 
-*Find a ref for 1ul wells*
+We can now use the molecule count to prepare the BASiCS data object.
+To incorporate the spike-in molecule counts within the `r Biocpkg("SingleCellExperiment")` object that BASiCS requires, the first column must contain the names associated to the spike-in genes. 
+The second column must contain the input number of molecules for the spike-in genes (amount per reaction).
+
 
 ```{r spike-info}
 # Prepare the data.frame
@@ -502,18 +504,20 @@ ERCC.count <- data.frame(row.names = ERCC.conc$ERCC.ID,
 
 ## Single condition example: Naive CD4^+^ T cells {#Tcells-single}
 
-To highlight the use of BASiCS and the quantification of variability measures in the single-condition case, we select naive CD4^+^ T cells of young B6 animals.
+To highlight the use of BASiCS to analyse cells in the single-condition case, we select naive CD4^+^ T cells of young B6 animals.
+Here, BASiCS can be used to identify highly- and lowly-variable genes and calculate interpretable gene- and cell-specific parameters.
+Among others, these include gene-specific parameters for mean expression, over-dispersion (biological variability) and residual over-dispersion (biological variability after correcting for the mean expression effect).
 
 ### Preparing the BASiCS data object
 
-The BASiCS Data object is an object of the class `Biocpkg("SingleCellExperiment")` [@Lun2018SCE].
+The BASiCS Data object is an object of the class `r Biocpkg("SingleCellExperiment")`.
 The `newBASiCS_Data` function can be used to create the required `SingleCellExperiment` object based on the following information:
 
-* Counts: a matrix of raw expression counts with dimensions $q$ times $n$ where $q$ is the number of genes (technical + biological) and $n$ is the number of cells. Gene names must be stored as row names of the counts matrix.
+* Counts: a matrix of raw expression counts with dimensions $q$ times $n$, where $q$ is the number of genes (technical + biological) and $n$ is the number of cells. Gene names must be stored as row names of the counts matrix.
 
-* Tech: a vector of TRUE/FALSE elements with length $q$. If Tech[i] = FALSE the gene i is biological; otherwise the gene is spike-in. This vector must be specified in the same order of genes as in the counts matrix.
+* Tech: a vector of `TRUE/FALSE` elements with length $q$. If `Tech[i] = FALSE` the gene i is biological; otherwise the gene is spike-in. This vector must be specified in the same order of genes as in the counts matrix.
 
-* SpikeInfo: a data.frame with $q-q_0$ rows where $q_0$ is the number of biological genes. First column must contain the names associated to the spike-in genes. The second column must contain the input number of molecules for the spike-in genes (amount per cell).
+* SpikeInfo: a `data.frame` with $q-q_0$ rows where $q_0$ is the number of biological genes. The first column must contain the names associated to the spike-in genes. The second column must contain the input number of molecules for the spike-in genes (amount per cell).
 
 * BatchInfo (optional argument): vector of length $n$ to indicate batch structure in situations where cells have been processed using multiple batches.
 
@@ -542,7 +546,7 @@ Data.naive <- newBASiCS_Data(Counts = counts(sce.naive),
 Data.naive
 ```
 
-Alternatively, when using data the contain spike-in genes, the original `SingleCellExperiment` object can be extended by simply specifying a `BatchInfo` slot in the `colData` object and by adding the `SpikeInfo` object to the `metadata` slot.
+Alternatively, when using datasets that contain spike-in genes, the original `SingleCellExperiment` object can be extended by simply specifying a `BatchInfo` slot in the `colData` object and by adding the `SpikeInfo` object to the `metadata` slot.
 
 ```{r Data-naive-alternative}
 Data.naive <- sce.naive
@@ -550,41 +554,42 @@ colData(Data.naive)$BatchInfo <- colData(sce.naive)$Individuals
 metadata(Data.naive)$SpikeInput <- SpikeInput$count
 ```
 
-In the next step, the MCMC sampler can be run to generate posterior estimates of model parameters
+After creating the `SingleCellExperiment` object that contains all information that `BASiCS` requires, the MCMC sampler can be run to generate posterior estimates of model parameters.
 
 ### Running the MCMC
 
 It is recommended to run the `BASiCS_MCMC` sampler for at least 40,000 iterations to assure convergence.
-However, if datasets are large and each condition contains hundreds of cells from a homogeneous population, BASiCS can be run with fewer (e.g. 20,000) iterations.
-Furthermore, `BASiCS_MCMC` can be run with very few (e.g 1,000) iterations to test whether the sampler breaks.
+However, if datasets are large and each condition contains hundreds of cells from a homogeneous population, BASiCS can be run with fewer (e.g. 20,000) iterations (see [10X Genomics data](#droplet-data)).
+However, for convenience, `BASiCS_MCMC` can be run with very few (e.g 1,000) iterations to test whether the sampler breaks.
 
 Here, we run the MCMC sampler for 40,000 iterations, using an initial 20,000 iterations as burn in an a thinning step of 20 iterations.
 Since the dataset contains spike-in genes, we run the sampler with `WithSpikes = TRUE` and we also want to correct for the mean-variance trend using `Regression = TRUE`.
-For further information see *link to Methods*
+For further information see [Methods](#methods).
 
-```{r MCMC-naive, echo=FALSE}
+```{r MCMC-naive, eval=FALSE}
 MCMC.naive <- BASiCS_MCMC(Data = Data.naive, 
                           N = 40000, 
                           Thin = 20, 
                           Burn = 20000, 
-                          Regression = TRUE, 
+                          Regression = FALSE, 
                           WithSpikes = TRUE)
 ```
 
-This sampler runs for *167 minutes* on a 1.4 GHz Intel Core i5 procesor with 4GB RAM and produces a `BASiCS_Chain` data object.
-This sampler runs for *XYZ minutes* on a 3.1 GHz Intel Core i7 procesor with 16GB RAM and produces a `BASiCS_Chain` data object.
+This sampler runs for 167 minutes on a 1.4 GHz Intel Core i5 procesor with 4GB RAM and produces a `BASiCS_Chain` data object.
+For comparison, this sampler runs for **XYZ minutes** on a 3.1 GHz Intel Core i7 procesor with 16GB RAM. **Cata can you run this on your machine as comparison?**
 For convenience, the MCMC chain can be obtained online at [https://jmlab-gitlab.cruk.cam.ac.uk/publications/BASiCSWorkflow2018](https://jmlab-gitlab.cruk.cam.ac.uk/publications/BASiCSWorkflow2018).
 
-```{r download-chain-naive, eval = FALSE}
-MCMC.naive <- readRDS(file = url("https://jmlab-gitlab.cruk.cam.ac.uk/publications/BASiCSWorkflow2018/raw/master/MCMCs/MCMC_naive.rds"))
+```{r download-chain-naive}
+website <- "https://jmlab-gitlab.cruk.cam.ac.uk/publications/"
+folder <- "BASiCSWorkflow2018/raw/master/MCMCs/"
+file <- "MCMC_naive.rds"
+MCMC.naive <- readRDS(file = url(paste(website, folder, file, sep = "")))
+MCMC.naive
 ```
+
 
 In the next step, the convergence of the sampler needs to be assessed.
-To obtain a summary of the MCMC sampler, BASiCS provides the `Summary` function.
 
-```{r Summary, eval = FALSE}
-Summary.naive <- Summary(MCMC.naive)
-```
 
 ### Validating the MCMC convergence
 
@@ -611,7 +616,7 @@ $k$. We can visualise this parameter using two
 # Convergence of mean expression parameters
 # Trace plot, sample histogram and autocorrelation
 plot(MCMC.naive, Param = "mu", Gene = 1)
-plot(MCMC.naive, Param = "mu", Gene = 1000)
+plot(MCMC.naive, Param = "mu", Gene = 7216)
 
 # Effective sample size
 BASiCS_diagPlot(MCMC.naive, Param = "mu")
@@ -792,6 +797,7 @@ The same is true for the over-dispersion parameters as estimated by BASiCS as sh
 Again, for this comparison, we exclude genes that do not show expression in at least 2 cells
 
 ```{r CV-comparison-BASiCS, eval = FALSE}
+Summary.naive <- Summary(MCMC.naive)
 # Remove genes
 eps_not_na <- !is.na(displaySummaryBASiCS(Summary.naive, Param = "epsilon")[, "median"])
 mu.naive <- displaySummaryBASiCS(Summary.naive, Param = "mu")[eps_not_na, ]
@@ -889,7 +895,7 @@ Data.active <- newBASiCS_Data(Counts = counts(sce.active),
 
 BASiCS takes this `SingleCellExperiment` object and runs the MCMC sampler over 40,000 iterations. 
 
-```{r MCMC-active, echo=FALSE}
+```{r MCMC-active, echo=FALSE, eval=FALSE}
 MCMC.active <- BASiCS_MCMC(Data = Data.active, 
                            N = 40000, 
                            Thin = 20, 
